--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
     <head>
-        <meta>
+        <meta charset="utf-8">
+        <title>Not Thomas Pynchon</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <base target="_self">
+        <link src="styles/main.css">
+        <script src="assets/simpl.min.js"></script>
     </head>
-    <body>
-        Hello
-    </body>
+
+    <!-- <header class="header"> -->
+        <!-- <a href="#0" class="header__logo">...</a> -->
+        <!-- <nav class="header__nav"> -->
+          <!-- <ul>
+            <li><a href="#0" class="header__link header__link--active">Homepage</a></li>
+            <li><a href="#0" class="header__link">About</a></li>
+            <li><a href="#0" class="header__link">Contact</a></li>
+          </ul> -->
+        <!-- </nav> -->
+      <!-- </header> -->
+
+    <body id="app"></body>
+
+    
 </html>
